--- a/OHPunchcard/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/OHPunchcard/en.lproj/MainStoryboard_iPhone.storyboard
@@ -11,16 +11,91 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5HH-Zv-ari" customClass="OHPunchcardView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PeU-bp-dwP">
+                                <items>
+                                    <barButtonItem style="plain" id="rSK-GF-N3H">
+                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="tfb-kv-0Xh">
+                                            <rect key="frame" x="6" y="7" width="88" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="p: 2"/>
+                                                <segment title="p: 10"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="paddingChanged:" destination="2" eventType="valueChanged" id="unt-BQ-dCD"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" id="gZP-8j-zKh">
+                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="wps-UL-EWF">
+                                            <rect key="frame" x="104" y="8" width="116" height="31"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="w: 12"/>
+                                                <segment title="w: 32"/>
+                                                <segment title="w: 44"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="cellSizeChanged:" destination="2" eventType="valueChanged" id="X7u-oe-OAf"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" id="2mI-VG-KDE">
+                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="uEK-W7-v7N">
+                                            <rect key="frame" x="230" y="8" width="68" height="31"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="c: 7"/>
+                                                <segment title="c: 1"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="columnCountChanged:" destination="2" eventType="valueChanged" id="Y4v-mU-sfT"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="0r4-Kv-YDT"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Aki-sP-jEa"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="bottom" secondItem="PeU-bp-dwP" secondAttribute="top" type="default" id="VDi-fT-aQ8"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="b0R-1P-73U"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="gUc-FJ-0oj"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="jPO-pw-Z3X"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="oZU-7f-G8J"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="punchcardView" destination="5HH-Zv-ari" id="JhX-vW-azT"/>
+                        <outlet property="toolbar" destination="PeU-bp-dwP" id="U1r-cJ-t3R"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
     <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OHPunchcardView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OHPunchcardView.h"/>
+        </class>
         <class className="OHPunchcardViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OHPunchcardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cellSizeChanged:"/>
+                <relationship kind="action" name="columnCountChanged:"/>
+                <relationship kind="action" name="paddingChanged:"/>
+                <relationship kind="outlet" name="punchcardView" candidateClass="OHPunchcardView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
