--- a/OHPunchcard/en.lproj/Main.storyboard
+++ b/OHPunchcard/en.lproj/Main.storyboard
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="2">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Punchcard View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="OHPunchcardViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PG2-oF-byT"/>
+                        <viewControllerLayoutGuide type="bottom" id="sq2-ri-yQV"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5HH-Zv-ari" customClass="OHPunchcardView">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PeU-bp-dwP">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" id="rSK-GF-N3H">
                                         <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="tfb-kv-0Xh">
-                                            <rect key="frame" x="6" y="7" width="88" height="32"/>
+                                            <rect key="frame" x="16" y="6" width="88" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="p: 2"/>
@@ -32,7 +43,7 @@
                                     </barButtonItem>
                                     <barButtonItem style="plain" id="gZP-8j-zKh">
                                         <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="wps-UL-EWF">
-                                            <rect key="frame" x="104" y="8" width="116" height="31"/>
+                                            <rect key="frame" x="114" y="6.5" width="116" height="31"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="w: 12"/>
@@ -46,7 +57,7 @@
                                     </barButtonItem>
                                     <barButtonItem style="plain" id="2mI-VG-KDE">
                                         <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="uEK-W7-v7N">
-                                            <rect key="frame" x="230" y="8" width="68" height="31"/>
+                                            <rect key="frame" x="240" y="6.5" width="68" height="31"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="c: 7"/>
@@ -60,15 +71,15 @@
                                 </items>
                             </toolbar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="5HH-Zv-ari" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="0r4-Kv-YDT"/>
-                            <constraint firstItem="PeU-bp-dwP" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Aki-sP-jEa"/>
-                            <constraint firstItem="5HH-Zv-ari" firstAttribute="bottom" secondItem="PeU-bp-dwP" secondAttribute="top" type="default" id="VDi-fT-aQ8"/>
-                            <constraint firstItem="5HH-Zv-ari" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="b0R-1P-73U"/>
-                            <constraint firstItem="PeU-bp-dwP" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="gUc-FJ-0oj"/>
-                            <constraint firstItem="5HH-Zv-ari" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="jPO-pw-Z3X"/>
-                            <constraint firstItem="PeU-bp-dwP" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="oZU-7f-G8J"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="0r4-Kv-YDT"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="Aki-sP-jEa"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="bottom" secondItem="PeU-bp-dwP" secondAttribute="top" id="VDi-fT-aQ8"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="b0R-1P-73U"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" id="gUc-FJ-0oj"/>
+                            <constraint firstItem="5HH-Zv-ari" firstAttribute="top" secondItem="3" secondAttribute="top" id="jPO-pw-Z3X"/>
+                            <constraint firstItem="PeU-bp-dwP" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="oZU-7f-G8J"/>
                         </constraints>
                     </view>
                     <connections>
@@ -80,27 +91,9 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="OHPunchcardView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OHPunchcardView.h"/>
-        </class>
-        <class className="OHPunchcardViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OHPunchcardViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="cellSizeChanged:"/>
-                <relationship kind="action" name="columnCountChanged:"/>
-                <relationship kind="action" name="paddingChanged:"/>
-                <relationship kind="outlet" name="punchcardView" candidateClass="OHPunchcardView"/>
-                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
     </simulatedMetricsContainer>
 </document>
